--- a/mobileStyle.css
+++ b/mobileStyle.css
@@ -30,118 +30,102 @@ RESOLUÇÃO DO WIDTH
     font-family: Haken Extra, Arial, Helvetica, sans-serif;
 }
 
-/* Works on Firefox */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: blue rgb(255, 255, 255);
-  }
-  
-  /* Works on Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 12px;
-  }
-  
-  *::-webkit-scrollbar-track {
-    background: rgb(255, 255, 255);
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color: rgb(209, 209, 209);
-    border-radius: 20px;
-    border: 3px solid rgb(255, 255, 255);
-  }
+html, body, main {
+    width: 100vw;
+    height: 100vh;
+}
 
-section#result {
-    background-image: linear-gradient(to bottom, #6743ff, #312cea);
-    margin-bottom: 20px;
-    color: white;
-    padding: 20px;
+div#result {
     text-align: center;
-    border-radius: 0px 0px 25px 25px;
+    padding: 20px;
+    background-image: linear-gradient(to top, #302cea, #6743ff);
+    color: white;
+    border-radius: 0px 0px 20px 20px;
 }
 
-section#result  h1 {
-    color: #bfacff;
+div#result h1 {
+    color: #cdbdff;
     font-size: 1.2em;
+    margin-bottom: 10px;
 }
 
-section#result div {
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 20px 35px;
-    background-image: linear-gradient(to top, #4c24cd00, #4b24cd);
+div#bola {
+    background-image: linear-gradient(to bottom, #2724da, #6643ff00);
     border-radius: 50%;
+    padding: 15px 0px ;
+    width: 120px;
+    margin: auto;
+    margin-bottom: 10px;
 }
 
-section#result > div > h2 {
+div#bola h2 {
     font-size: 3em;
 }
 
-section#result > div > h3 {
-    color: #bfacff;
-    font-size: 1em;
+div#bola h3 {
+    color: #cdbdff;
 }
 
-section#result p {
-    font-family: Haken, Arial, Helvetica, sans-serif;
-    color: #bfacff;
-    margin-top: 20px;
-}
-
-section#resume {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-div.result {
-    background-color: #fff6f5;
-    padding: 15px;
-    margin-top: 20px;
+div#result h4 {
+    font-size: 1.3em;
     margin-bottom: 10px;
-    border-radius: 5px;
+}
+
+div#result p {
+    color: #cdbdff;
+}
+
+div#resume {
+    margin: 10px 20px 10px 20px;
+}
+
+container.container {
+    background-color: #fff6f5;
+    margin: 15px 0px 15px 0px;
+    padding: 15px;
+    border-radius: 10px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-div.result h4 {
+container.container h2 {
     position: absolute;
-    left: 70px;
+    left: 65px;
 }
 
-div.reaction h4 {
-    color: #ff5555;
-}
-
-div.memory {
+container.memory {
     background-color: #fffbf2;
 }
 
-div.memory h4 {
-    color: #ffb21e;
-}
-
-div.verbal {
+container.verbal {
     background-color: #f2fbfa;
 }
 
-div.verbal h4 {
-    color: #00bb8f;
-}
-
-div.visual {
+container.visual {
     background-color: #f3f3fd;
 }
 
-div.visual h4 {
+container.reacao h2 {
+    color: #ff5555;
+}
+
+container.memory h2 {
+    color: #ffb21e;
+}
+
+container.verbal h2 {
+    color: #00bb8f;
+}
+
+container.visual h2 {
     color: #1125d6;
 }
 
-div.continue {
-    margin-top: 20px;
-    margin-bottom: 10px;
+container.continue {
+    display: block;
+    text-align: center;
 }
 
 a {
@@ -153,4 +137,3 @@ a {
     padding: 15px;
     display: block;
 }
-
